--- a/Untitled.html
+++ b/Untitled.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Untitled.css">
+    <link rel="stylesheet" href="Untitled.css" media="screen and (min-width: 701px)">
+    <link rel="stylesheet" href="mobi.css" media="screen and (max-width: 700px)">
     <title>Facebook login</title>
 </head>
 <body>
@@ -28,5 +29,19 @@
             </form>
         </div>
     </div>
+    <h2>
+        <div class="mobile">
+            <div class="nav">
+                <p>Facebook</p>
+            </div>
+            <div class="loginm">
+                <form class="log">
+                    <input type="text" placeholder="Tên Đăng Nhập">
+                    <input type="password" placeholder="Password">
+                    <a href="" class="logm">Login</a>
+                </form>
+            </div>
+        </div>
+    </h2>
 </body>
 </html>
