--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
 <body>
     <p>hello hoang</p>
     <p>hello hieu</p>
+    <script>
+       var value = null;
+       do {
+          value = prompt("nhap so");
+       }
+       while(value < 1||value > 10);
+       alert("so ban vua nhap" + value)
+</script>
+    <html>
+    <head>
+        <title></title>
+    </head>
+    <body>
+        <script language="javascript">
+            var website = 'freetuts.net';
+            document.write(website);
+        </script>
+    </body>
+</html>
 </body>
 </html>
