--- a/websitebs.html
+++ b/websitebs.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="webbs.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $('#kilo').modal('toggle') 
+    </script>>
 </head>
 <body>
     <h1 class="container-fluid h-100 d-flex flex-column p-lg-5">
@@ -23,7 +27,7 @@
                     <input class="mb-2" type="text" placeholder="Tên đăng nhập"><br>
                     <input type="password" placeholder="Mật khẩu"><br>
                     <div class="btnlayout justify-content-center">
-                    <a href="" class="btn btn-primary active justify-content-center mt-3">Đăng nhập</a></div>
+                    <a id="kilo" href="" class="btn btn-primary active justify-content-center mt-3">Đăng nhập</a></div>
                 </form>
             </div>
         </div>
