--- a/websitebs.html
+++ b/websitebs.html
@@ -19,7 +19,7 @@
             <div class="col-lg-3 offset-1 align-content-start flex-column justify-content-center p-4">
                 <p style="font-family: facebook letter faces; color: rgb(71, 95, 231);">Facebook</p>
                 <P style="font-size: 22px;">Đăng nhập gần đây</P>
-                <p style="font-size: 16px; color: #606770">Nhấn vào ảnh để đăng nhập hoặc để thêm tài khoản</p>
+                <p style="font-size: 16px; color: #606770">Nhấn vào ảnh để đăng nhập hoặc để thêm tài khoản code thêm </p>
                 <img class="img-fluid img1" src="b.jpg" alt="Avatar">
             </div>
             <div class="col-lg-2 offset-4 text-center d-md-grid justify-content-center align-content-center">
