--- a/websitebs.html
+++ b/websitebs.html
@@ -5,13 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap website</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" href="webbs.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        $('#kilo').modal('toggle') 
-    </script>>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
 </head>
 <body>
     <h1 class="container-fluid h-100 d-flex flex-column p-lg-5">
@@ -22,17 +17,39 @@
                 <p style="font-size: 16px; color: #606770">Nhấn vào ảnh để đăng nhập hoặc để thêm tài khoản code thêm lần 2 </p>
                 <img class="img-fluid img1" src="b.jpg" alt="Avatar">
             </div>
-            <div class="col-lg-2 offset-4 text-center d-md-grid justify-content-center align-content-center">
-                <form class="login-form form-control input-md">
+
+            <div class="col-lg-2 offset-4 text-center d-md-grid justify-content-center align-content-center w-auto p-3">
+                <form class="login-form form-control input-lg input-md">
                     <input class="mb-2" type="text" placeholder="Tên đăng nhập"><br>
                     <input type="password" placeholder="Mật khẩu"><br>
-                    <div class="btnlayout justify-content-center">
-                    <a id="kilo" href="" class="btn btn-primary active justify-content-center mt-3">Đăng nhập</a></div>
+                    <input type="button" name="btn" value="Submit" id="submitBtn" data-toggle="modal" data-target="#goku" class="btn btn-default" /> 
+
+                    <div class="modal fade" id="goku" tabindex="-1" role="dialog">
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title">Modal title</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <p>Modal body text goes here.</p>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-primary">Save changes</button>
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
                 </form>
             </div>
         </div>
     </h1>  
 </body>
+
 <footer class="page-footer">
     <div class="container">
         <div class="row text-center">
@@ -40,4 +57,6 @@
         </div>
     </div>
 </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </html>
